# retina-sim

./: .gitignore  BasicCell.cpp  BasicCell.h  CMakeLists.txt  Cell.cpp  Cell.h  LocalEdgeDetector.cpp  LocalEdgeDetector.h  NetworkModel.cpp  NetworkModel.h  OffAlpha.cpp  OffAlpha.h  OnAlpha.cpp  OnAlpha.h  OnDSGC.cpp  OnDSGC.h  OnOSGC.cpp  OnOSGC.h  OnOffDSGC.cpp  OnOffDSGC.h  README.md  Stim.cpp  Stim.h  main.cpp  stimuli.cpp  stimuli.h  type_defs.h  utils.cpp  utils.h
